Add credit to me.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     </head>
     <body>
         <h1>Stock Investment Earnings Calculator</h1>
+
+        <p class="credit">Kevin Dong [July 8, 2024]</p>
+
         <div class="container">
             <div class="purchase-price-container">
                 <h3>Purchase Price</h3>
